// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentForm desktop default 1`] = `
<article
  className="YpcPaymentForm"
>
  <div
    className="YpcPaymentForm-Body"
  >
    <header
      className="YpcHeader YpcPaymentForm-Header"
    >
      <div
        className="YpcHeader-Content"
      >
        <h3
          className="YpcHeader-Title"
        >
          ООО «Кусочек лета»
        </h3>
        <h2
          className="YpcHeader-PriceGroup"
        >
          <span
            className="YpcHeader-TotalPrice"
          >
            1 000 ₽
          </span>
          <span
            className="YpcHeader-OriginalPrice"
          >
            1 200 ₽
          </span>
        </h2>
        <h4
          className="YpcHeader-Subtitle"
        >
          Заказ №9031
        </h4>
      </div>
      <i
        aria-hidden={true}
        className="YpcIcon YpcIcon_height_s YpcLogo YpcLogo_lang_ru"
      />
    </header>
    <div
      className="YpcPaymentForm-CarouselContainer"
      hidden={false}
    >
      <div
        className="YpcCarousel YpcPaymentForm-Carousel"
      >
        <div
          className="YpcRadioGroup YpcCarousel-RadioGroup"
          onChange={[Function]}
          role="radiogroup"
        >
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact YpcCarousel-RadioGroupItem"
            >
              <div
                className="YpcBankCard-Icons"
              >
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
                />
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
                />
              </div>
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  Visa
                </h4>
                <h4
                  className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
                >
                  <span
                    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                  >
                    3604
                  </span>
                </h4>
              </div>
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="card-x3230"
              />
            </label>
          </div>
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcBankCard YpcBankCard_view_vertical YpcBankCard_size_compact YpcCarousel-RadioGroupItem"
            >
              <div
                className="YpcBankCard-Icons"
              >
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
                />
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_name_mir-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
                />
              </div>
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  MIR
                </h4>
                <h4
                  className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_vertical YpcBankCard-Number_size_compact"
                >
                  <span
                    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                  >
                    2986
                  </span>
                </h4>
              </div>
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="card-x7603"
              />
            </label>
          </div>
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcNewBankCard YpcNewBankCard_view_vertical YpcCarousel-RadioGroupItem"
            >
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon YpcNewBankCard-Icon_view_vertical"
              />
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  Добавить карту
                </h4>
              </div>
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="new_card"
              />
            </label>
          </div>
        </div>
        <div
          className="YpcSelect YpcCarousel-Select"
        >
          <button
            aria-haspopup="listbox"
            className="YpcButton YpcSelect-Button"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onPointerDown={[Function]}
            onPointerEnter={[Function]}
            onPointerLeave={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            Другие способы оплаты
          </button>
          <ul
            className="YpcMenu YpcSelect-Menu"
            hidden={true}
            onBlur={[Function]}
            onKeyDown={[Function]}
            role="listbox"
            tabIndex={-1}
          >
            <li
              className="YpcMenu-Item"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              onPress={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <article
                className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
              >
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
                />
                <div
                  className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
                >
                  <h4
                    className="YpcPaymentMethod-Name"
                  >
                    Uzcard
                  </h4>
                  <h4
                    className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
                  >
                    <span
                      className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                    >
                      2222
                    </span>
                  </h4>
                </div>
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_name_uzcard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
                />
              </article>
            </li>
            <li
              className="YpcMenu-Item"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
              onPress={[Function]}
              onTouchStart={[Function]}
              role="option"
              tabIndex={-1}
            >
              <article
                className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
              >
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_height_s YpcIcon_name_alfa-bank YpcIcon_width_xl YpcBankIcon"
                />
                <div
                  className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
                >
                  <h4
                    className="YpcPaymentMethod-Name"
                  >
                    Visa
                  </h4>
                  <h4
                    className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
                  >
                    <span
                      className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                    >
                      1113
                    </span>
                  </h4>
                </div>
                <i
                  aria-hidden={true}
                  className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
                />
              </article>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      className="YpcPaymentForm-DieHardFrameContainer YpcPaymentForm-DieHardFrameContainer_fieldset_all"
      hidden={true}
    >
      <iframe
        className="YpcDieHardFrame YpcPaymentForm-DieHardFrame"
        src="https://diehard.yandex.ru/web/card_form?desktop=1&purchase_token=yandex-pay&template_tag=modern%2Fform&lang=ru"
      />
    </div>
    <div
      className="YpcPaymentForm-EmailInputContainer"
    >
      <div
        className="YpcEmailInput YpcPaymentForm-EmailInput"
      >
        <label
          className="YpcEmailInput-Label"
        >
          <div
            className="YpcEmailInput-LabelText"
          >
            Введите почту
          </div>
          <input
            className="YpcEmailInput-Field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="email"
            value=""
          />
        </label>
        <div
          className="YpcEmailInput-Description"
        >
          На эту почту мы вышлем вам чек
        </div>
      </div>
    </div>
    children
    <div>
      BeforePaymentButton: 
      0
    </div>
    <div
      className="YpcPaymentForm-PaymentButtonContainer"
    >
      <button
        className="YpcButton YpcButton_disabled YpcPaymentButton YpcPaymentButton_disabled YpcPaymentForm-PaymentButton"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        onPress={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        Оплатить
      </button>
    </div>
  </div>
  <div>
    BeforeFooter: 
    0
  </div>
  <footer
    className="YpcFooter YpcPaymentForm-Footer"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
    />
    <div
      className="YpcFooter-Content"
    >
      <div
        className="YpcFooter-Agreement"
      >
        Платеж получит ООО «Brebs»
      </div>
      <span
        className="YpcTimeLeft"
      >
        Осталось
         
        <time>
          
        </time>
      </span>
    </div>
  </footer>
</article>
`;

exports[`PaymentForm touch-phone default 1`] = `
<article
  className="YpcPaymentForm"
>
  <div
    className="YpcPaymentForm-Body"
  >
    <header
      className="YpcHeader YpcPaymentForm-Header"
    >
      <div
        className="YpcHeader-Content"
      >
        <h3
          className="YpcHeader-Title"
        >
          ООО «Кусочек лета»
        </h3>
        <h2
          className="YpcHeader-PriceGroup"
        >
          <span
            className="YpcHeader-TotalPrice"
          >
            1 000 ₽
          </span>
          <span
            className="YpcHeader-OriginalPrice"
          >
            1 200 ₽
          </span>
        </h2>
        <h4
          className="YpcHeader-Subtitle"
        >
          Заказ №9031
        </h4>
      </div>
      <i
        aria-hidden={true}
        className="YpcIcon YpcIcon_height_s YpcLogo YpcLogo_lang_ru"
      />
    </header>
    <div
      className="YpcPaymentForm-CarouselContainer"
    >
      <h3
        className="YpcPaymentForm-Title"
      >
        Данные для оплаты
      </h3>
      <div
        className="YpcCarousel YpcPaymentForm-Carousel"
      >
        <div
          className="YpcRadioGroup YpcCarousel-RadioGroup"
          onChange={[Function]}
          role="radiogroup"
        >
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
            >
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_height_s YpcIcon_name_tinkoff-bank YpcIcon_width_xl YpcBankIcon"
              />
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  Visa
                </h4>
                <h4
                  className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
                >
                  <span
                    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                  >
                    3604
                  </span>
                </h4>
              </div>
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
              />
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="card-x3230"
              />
            </label>
          </div>
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
            >
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_height_s YpcIcon_name_sber-bank YpcIcon_width_xl YpcBankIcon"
              />
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  MIR
                </h4>
                <h4
                  className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
                >
                  <span
                    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                  >
                    2986
                  </span>
                </h4>
              </div>
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_name_mir-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
              />
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="card-x7603"
              />
            </label>
          </div>
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
            >
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_height_s YpcIcon_name_unknown-bank YpcIcon_width_xl YpcBankIcon"
              />
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  Uzcard
                </h4>
                <h4
                  className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
                >
                  <span
                    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                  >
                    2222
                  </span>
                </h4>
              </div>
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_name_uzcard-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
              />
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="card-x3231"
              />
            </label>
          </div>
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcBankCard YpcBankCard_view_horizontal YpcBankCard_size_compact"
            >
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_height_s YpcIcon_name_alfa-bank YpcIcon_width_xl YpcBankIcon"
              />
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  Visa
                </h4>
                <h4
                  className="YpcCardNumber YpcCardNumber_size_compact YpcBankCard-Number YpcBankCard-Number_view_horizontal YpcBankCard-Number_size_compact"
                >
                  <span
                    className="YpcCardNumber-Digits YpcCardNumber-Digits_size_compact"
                  >
                    1113
                  </span>
                </h4>
              </div>
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_name_visa-paysystem YpcIcon_width_xl YpcIcon_height_s YpcPaySystemIcon"
              />
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="card-x3232"
              />
            </label>
          </div>
          <div
            className="YpcRadioGroup-Item"
          >
            <article
              className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal"
            >
              <i
                aria-hidden={true}
                className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon"
              />
              <div
                className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
              >
                <h4
                  className="YpcPaymentMethod-Name"
                >
                  Добавить карту
                </h4>
              </div>
            </article>
            <label
              className="YpcRadioGroup-Label"
              onPointerEnter={[Function]}
              onPointerLeave={[Function]}
            >
              <input
                checked={false}
                className="YpcRadioGroup-Control"
                name="ypc-radio-group"
                readOnly={true}
                type="radio"
                value="new_card"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      className="YpcPaymentForm-EmailInputContainer"
    >
      <div
        className="YpcEmailInput YpcPaymentForm-EmailInput"
      >
        <label
          className="YpcEmailInput-Label"
        >
          <div
            className="YpcEmailInput-LabelText"
          >
            Введите почту
          </div>
          <input
            className="YpcEmailInput-Field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="email"
            value=""
          />
        </label>
        <div
          className="YpcEmailInput-Description"
        >
          На эту почту мы вышлем вам чек
        </div>
      </div>
    </div>
    children
    <div>
      BeforeFooter: 
      0
    </div>
    <footer
      className="YpcFooter YpcPaymentForm-Footer"
    >
      <i
        aria-hidden={true}
        className="YpcIcon YpcIcon_name_security-lock YpcIcon_width_l YpcIcon_height_l YpcFooter-IconLock"
      />
      <div
        className="YpcFooter-Content"
      >
        <div
          className="YpcFooter-Agreement"
        >
          Платеж получит ООО «Brebs»
        </div>
        <span
          className="YpcTimeLeft"
        >
          Осталось
           
          <time>
            
          </time>
        </span>
      </div>
    </footer>
  </div>
  <div
    className="YpcPaymentForm-Drawer"
  >
    <div
      className="YpcPaymentForm-DrawerBox"
    >
      <div
        className="YpcPaymentForm-DrawerHeader"
      >
        <h3
          className="YpcPaymentForm-Title"
        >
          Оплата
        </h3>
        <div
          className="YpcPaymentForm-BackButtonContainer"
        >
          <button
            className="YpcButton YpcPaymentForm-BackButton"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onPointerEnter={[Function]}
            onPointerLeave={[Function]}
            onPress={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <svg
              className="YpcPaymentForm-BackIconContainer"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                className="YpcPaymentForm-BackIcon"
                d="M8 8l8 8m-8 0l8-8"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        className="YpcPaymentForm-DrawerBody"
      >
        <div
          className="YpcPaymentForm-DieHardFrameContainer YpcPaymentForm-DieHardFrameContainer_fieldset_all"
        >
          <iframe
            className="YpcDieHardFrame YpcPaymentForm-DieHardFrame"
            src="https://diehard.yandex.ru/web/card_form?mobile=1&purchase_token=yandex-pay&template_tag=modern%2Fform&lang=ru"
          />
        </div>
      </div>
      <div>
        BeforePaymentButton: 
        0
      </div>
    </div>
    <div
      className="YpcPaymentForm-PaymentButtonContainer"
    >
      <button
        className="YpcButton YpcButton_disabled YpcPaymentButton YpcPaymentButton_disabled YpcPaymentForm-PaymentButton"
        disabled={true}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        onPress={[Function]}
        onTouchStart={[Function]}
        tabIndex={-1}
        type="button"
      >
        Оплатить
      </button>
    </div>
  </div>
</article>
`;
